change nav tag, h1 and add aria-label to button (kudos to Yemisrach)

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           </div>
         </div>
         <nav id="navTimeframe" class="nav">
-          <a href="#" class="nav_item" data-timeframe="daily">Daily</a>
-          <a href="#" class="nav_item active" data-timeframe="weekly">Weekly</a>
-          <a href="#" class="nav_item" data-timeframe="monthly">Monthly</a>
+          <button class="nav_item" data-timeframe="daily">Daily</button>
+          <button class="nav_item active" data-timeframe="weekly">Weekly</button>
+          <button class="nav_item" data-timeframe="monthly">Monthly</button>
         </nav>
       </div>
     </header>
